--- a/interface/banned/index.html
+++ b/interface/banned/index.html
@@ -5,9 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>나무위키 꺼라</title>
+    <style>
+        body {
+            text-align: center;
+            font-size: 2em;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #000;
+            padding: 1em;
+            color: #FFF;
+        }
+        .important {
+            color: #F44;
+        }
+        body {
+            background: #333;
+            color: #FFF;
+        }
+    </style>
 </head>
 <body>
-    <h1>TurnOff-NamuWiki</h1>
-    <p>나무위키 접속시도가 감지되어 강제 종료합니다.</p>
+    <header>
+        <h1>TurnOff-NamuWiki</h1>
+    </header>
+    <main>
+        <p>나무위키 접속시도가 감지되어 <span class="important">강제 종료</span>합니다.</p>
+    </main>
 </body>
 </html>
