--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -7,19 +7,60 @@
     <title>꺼무위키 시스템</title>
     <style>
         body {
-            width: 300px;
+            width: 350px;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            padding: 1em;
+            background: #000;
+            color: #FFF;
+        }
+        header h1 {
+            text-align: center;
+        }
+        header .version {
+            text-align: right;
+        }
+        main {
+            text-align: left;
+            padding: 1em 0.4em;
+        }
+        footer {
+            background: #333;
+            color: #CCC;
+            padding: .4em;
+        }
+        a {
+            text-decoration: none;
+            color: #389bff;
+        }
+        #status {
+            content: ' ';
+            white-space: nowrap;
+            height: 2em;
+            width: 350px;
+            word-break: break-all;
         }
         
     </style>
 </head>
 <body>
-    <h1>TurnOff-NamuWiki Console</h1>
-
-    <input type="checkbox" id="block_namuwiki" data-val="namuwikiBlock"> 나무위키 차단/차단해제<br>
-    <input type="checkbox" id="riss_auto" data-val="openRiss"> 나무위키 접속시 RISS 자동 접속<br>
-    <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> 나무위키 접속시 DBPia 자동 접속<br>
-    <br>
+    <header>
+        <h1>TurnOff-NamuWiki Console</h1>
+        <p class="version" id="extension_version">ver.0.0.2-alpha</p>
+    </header>
+    <main>
+        <input type="checkbox" id="block_namuwiki" data-val="namuwikiBlock"> 나무위키 차단/차단해제<br>
+        <input type="checkbox" id="riss_auto" data-val="openRiss"> 나무위키 접속시 RISS 자동 접속<br>
+        <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> 나무위키 접속시 DBPia 자동 접속<br>
+    </main>
     <span id="status"></span>
+
+    <footer>
+        Copyright &copy; Alex4386 and TurnOff-NamuWiki Contributors.<br>
+        The Source Code of this extension is available at <a href="https://github.com/Alex4386/turnoff-namuwiki" target="_blank">GitHub</a>.
+    </footer>
 </body>
 
 <script src="popup.js"></script>
