add: mirror banning and better algorithm

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -52,8 +52,10 @@
     </header>
     <main>
         <input type="checkbox" id="block_namuwiki" data-val="namuwikiBlock"> 나무위키 차단/차단해제<br>
+        <input type="checkbox" id="block_namumirror" data-val="namuMirrorBlock"> 나무위키 미러 차단/차단해제<br>
         <input type="checkbox" id="riss_auto" data-val="openRiss"> 나무위키 접속시 RISS 자동 접속<br>
         <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> 나무위키 접속시 DBPia 자동 접속<br>
+        <input type="url" id="dbpia_proxy" data-val="proxyDbpia" placeholder="학교 DBPia 프록시 주소">
     </main>
     <span id="status"></span>
 
