add: It's TypeScript Time

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -64,6 +64,6 @@
         The Source Code of this extension is available at <a href="https://github.com/Alex4386/turnoff-namuwiki" target="_blank">GitHub</a>.
     </footer>
 </body>
-
-<script src="popup.js"></script>
+<script src="/polyfill/browser-polyfill.min.js"></script>
+<script src="/lib/popup.js"></script>
 </html>
