add: firefox support

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -10,6 +10,7 @@
             width: 350px;
             margin: 0;
             padding: 0;
+            background: #FFF;
         }
         header {
             padding: 1em;
