add: basic support for arxiv and google scholar

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -56,6 +56,8 @@
         <input type="checkbox" id="block_namumirror" data-val="namuMirrorBlock"> 나무위키 미러 차단/차단해제<br>
         <input type="checkbox" id="riss_auto" data-val="openRiss"> 나무위키 접속시 RISS 자동 접속<br>
         <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> 나무위키 접속시 DBPia 자동 접속<br>
+        <input type="checkbox" id="arxiv_auto" data-val="openArxiv"> 나무위키 접속시 arXiv 자동 접속<br>
+        <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar"> 나무위키 접속시 Google Scholar 자동 접속<br>
         <input type="url" id="dbpia_proxy" data-val="proxyDbpia" placeholder="학교 DBPia 프록시 주소">
     </main>
     <span id="status"></span>
