add: font support for blocked page

--- a/interface/banned/index.html
+++ b/interface/banned/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>나무위키 꺼라</title>
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Nunito&display=swap');
         body {
+            font-family: "Nunito", "Noto Sans KR", sans-serif;
             text-align: center;
             font-size: 2em;
             margin: 0;
