--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -12,69 +12,169 @@
             width: 370px;
             margin: 0;
             padding: 0;
-            background: #FFF;
+            background: #EEE;
             font-size: 13px;
         }
         header {
-            padding: 1em;
-            background: #000;
+            width: 100vw;
+            display: inline-block;
+            border-bottom: solid 1px #E7E7E7;
+            background: #FFF;
             color: #FFF;
         }
-        header h1 {
-            font-weight: 900;
-        }
-        header.namuwiki {
+        body.namuwiki header {
             background: #47a69b;
         }
-        header:not(.namuwiki) {
+        body.blocked header{
             background: #b85964;
         }
-        header.redirect {
-            background: #596bb8;
+        body.blocked.mirror-blocked header {
+            background: #a52231;
+        }
+        body.redirect header{
+            background: #596bb8 !important;
+        }
+
+        header .wrap {
+            padding: 1em;
+            line-height: 1.7em;
         }
         header h1 {
-            text-align: center;
-        }
-        header .version {
-            text-align: right;
+            width: fit-content;
+            display: inline-block;
+            font-size: 1.3em;
+            margin: 0;
+            background: url('/showcase/logo-256x256.png') no-repeat;
+            background-size: 1.3em;
+            padding-left: 1.7em;
+            background-position: left center;
         }
         main {
-            text-align: left;
-            padding: 1em 0.4em;
+            padding: .7em;
         }
-        footer {
-            background: #333;
-            color: #CCC;
-            padding: .4em;
+        header .version {
+            float: right;
+            text-align: right;
         }
-        a {
-            text-decoration: none;
-            color: #389bff;
-        }
-        #status {
-            content: ' ';
+
+        .control-panel {
+            display: flex;
             white-space: nowrap;
-            height: 2em;
-            width: 350px;
-            word-break: break-all;
+        }
+
+        .namuwiki-block {
+            content: ' ';
+            background: url(/showcase/logo-256x256.png) no-repeat;
+            background-size: 10em;
+            background-position: top center;
+            flex: 0 0 50%;
+            padding-top: 10em;
+            text-align: center;
+        }
+
+        body.namuwiki .namuwiki-block {
+            background: url(/showcase/logo-nostrike.png) no-repeat;
+            background-size: 10em;
+            background-position: top center;
+        }
+
+        .namuwiki-mirror-block {
+            flex: 1;
+            text-align: center;
         }
         
+        .namuwiki-mirror-block .mirror-indicator {
+            padding-top: 6em;
+            height: 2em;
+            padding-bottom: 2em;
+        }
+        .namuwiki-mirror-block .mirror-indicator span {
+            font-size: 2em;
+        }
+
+        body.mirror-blocked .namuwiki-mirror-block .mirror-indicator span {
+            text-decoration: line-through;
+        }
+
+        hr {
+            border-top: solid 1px #3F3F3F;
+            margin: 1.4em 0;
+        }
+
+        footer {
+            background: #2F2F2F;
+            color: #FFF;
+            padding: .4em;
+        }
+
+        a {
+            text-decoration: none;
+            color: #0074e9;
+        }
+
+        main div h2 {
+            margin: .3em 0;
+        }
+
+        h2.inline {
+            display: inline-block;
+            width: fit-content;
+            margin: 0;
+        }
+
+        input[type="url"] {
+            width: 100%;
+        }
     </style>
+    <link rel="stylesheet" href="switch.css">
 </head>
 <body>
     <header>
-        <h1>TurnOff-NamuWiki Console</h1>
-        <p class="version" id="extension_version">JavaScript Error!!</p>
+        <div class="wrap">
+            <span class="version" id="extension_version">JavaScript Error!!</span>
+            <h1>TurnOff-NamuWiki Console</h1>
+        </div>
     </header>
     <main>
-        <input type="checkbox" id="block_namuwiki" data-val="namuwikiBlock"> 나무위키 차단/차단해제<br>
-        <input type="checkbox" id="block_namumirror" data-val="namuMirrorBlock"> 나무위키 미러 차단/차단해제<br>
-        <input type="checkbox" id="riss_auto" data-val="openRiss"> 나무위키 접속시 RISS 자동 접속<br>
-        <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> 나무위키 접속시 DBPia 자동 접속<br>
-        <input type="checkbox" id="arxiv_auto" data-val="openArxiv"> 나무위키 접속시 arXiv 자동 접속<br>
-        <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar"> 나무위키 접속시 Google Scholar 자동 접속<br>
-        <input type="url" id="dbpia_proxy" data-val="proxyDbpia" placeholder="학교 DBPia 프록시 주소"><br><br>
-        <input type="checkbox" id="filter_search" data-val="filterSearch"> Google 검색결과에서 나무위키 지우기
+        <div class="control-panel">
+            <div class="namuwiki-block">
+                <label class="switch" for="block_namuwiki">
+                    <input type="checkbox" id="block_namuwiki" data-val="namuwikiBlock">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+            <div class="namuwiki-mirror-block">
+                <div class="mirror-indicator">
+                    <span>MIRROR</span>
+                </div>
+                <label class="switch" for="block_namumirror">
+                    <input type="checkbox" id="block_namumirror" data-val="namuMirrorBlock">
+                    <span class="slider round"></span>
+                </label>
+            </div>
+        </div>
+        <hr />
+        <div class="redirect">
+            <h2>자동접속: </h2>
+            <input type="checkbox" id="riss_auto" data-val="openRiss"> RISS, 
+            <input type="checkbox" id="dbpia_auto" data-val="openDbpia"> DBpia,
+            <input type="checkbox" id="arxiv_auto" data-val="openArxiv"> arXiv,
+            <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar"> Google 학술검색
+        </div>
+        <hr />
+        <div class="search-filter">
+            <h2>검색 엔진 필터링:</h2>
+            <label class="switch" for="filter_search">
+                <input type="checkbox" id="filter_search" data-val="filterSearch">
+                <span class="slider round"></span>
+            </label>
+        </div>
+        <hr />
+        <div class="settings">
+            <h2>설정: </h2>
+            <input type="url" id="dbpia_proxy" data-val="proxyDbpia" placeholder="학교 DBPia 프록시 주소">
+        </div>
+            
     </main>
     <span id="status"></span>
 
