--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -129,6 +129,10 @@
         .to-right {
             float: right;
         }
+
+        div.redirect .content {
+            text-align: center;
+        }
     </style>
     <link rel="stylesheet" href="switch.css">
     <link rel="stylesheet" href="checkbox.css">
@@ -161,22 +165,24 @@
         <hr />
         <div class="redirect">
             <h2>자동접속: </h2>
-            <label class="container" for="riss_auto">RISS
-                <input type="checkbox" id="riss_auto" data-val="openRiss">
-                <span class="checkmark"></span>
-            </label>,
-            <label class="container" for="dbpia_auto">DBPia
-                <input type="checkbox" id="dbpia_auto" data-val="openDbpia">
-                <span class="checkmark"></span>
-            </label>,
-            <label class="container" for="arxiv_auto">arXiv
-                <input type="checkbox" id="arxiv_auto" data-val="openArxiv">
-                <span class="checkmark"></span>
-            </label>,
-            <label class="container" for="googlescholar_auto">Google 학술검색
-                <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar">
-                <span class="checkmark"></span>
-            </label>
+            <div class="content">
+                <label class="container" for="riss_auto">RISS
+                    <input type="checkbox" id="riss_auto" data-val="openRiss">
+                    <span class="checkmark"></span>
+                </label>,
+                <label class="container" for="dbpia_auto">DBPia
+                    <input type="checkbox" id="dbpia_auto" data-val="openDbpia">
+                    <span class="checkmark"></span>
+                </label>,
+                <label class="container" for="arxiv_auto">arXiv
+                    <input type="checkbox" id="arxiv_auto" data-val="openArxiv">
+                    <span class="checkmark"></span>
+                </label>,
+                <label class="container" for="googlescholar_auto">Google 학술검색
+                    <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar">
+                    <span class="checkmark"></span>
+                </label>
+            </div>
         </div>
         <hr />
         <div class="search-filter">
