add: adblock namuwiki

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -192,6 +192,14 @@
                 <span class="slider round"></span>
             </label>
             <h2>검색 엔진 필터링:</h2>
+        </div><br>
+        <div class="adblock-namuwiki">
+            
+            <label class="switch to-right" for="adblock_namuwiki">
+                <input type="checkbox" id="adblock_namuwiki" data-val="adBlockNamuWiki">
+                <span class="slider round"></span>
+            </label>
+            <h2>나무위키 광고차단:</h2>
         </div>
         <hr />
         <div class="settings">
