--- a/interface/banned/index.html
+++ b/interface/banned/index.html
@@ -26,6 +26,10 @@
             background: #333;
             color: #FFF;
         }
+        a {
+            color: #66f;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +38,9 @@
     </header>
     <main>
         <p>나무위키 접속시도가 감지되어 <span class="important">강제 종료</span>합니다.</p>
+        <p>접속을 원하는 경우 나무위키 차단을 끈 후 <br><a id="access" href="#">여기</a>를 클릭해 주세요.</p>
     </main>
 </body>
+<script src="/lib/util.js"></script>
+<script src="/lib/blocked.js"></script>
 </html>
