fix: popup page's alignment issues

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -11,16 +11,16 @@
             margin: 0; padding: 0;
         }
         body {
+            margin: 0 auto;
             font-family: "Nunito", "Noto Sans KR", sans-serif;
             width: 370px;
-            margin: 0;
             padding: 0;
             background: #EEE;
             font-size: 13px;
             overflow-x: hidden;
         }
         header {
-            width: 100vw;
+            width: 370px;
             display: inline-block;
             border-bottom: solid 1px #E7E7E7;
             background: #FFF;
