--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -194,6 +194,14 @@
                 <span class="slider-small round"></span>
             </label>
             <h3>나무라이브 차단:</h3>
+        </div><br>
+        <div class="search-filter">
+            
+            <label class="switch-small to-right" for="intelliBan_enable">
+                <input type="checkbox" id="intelliBan_enable" data-val="intelliBanEnabled">
+                <span class="slider-small round"></span>
+            </label>
+            <h3>intelliBan 활성화:</h3>
         </div>
         <hr />
         <div class="settings">
