--- a/interface/settings/index.html
+++ b/interface/settings/index.html
@@ -166,7 +166,7 @@
             outline: none;
         }
         
-        input#dbpia_proxy {
+        input[type=url] {
             width: calc(100% - 30px);
         }
     </style>
@@ -206,6 +206,16 @@
                         <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar">
                         <span class="checkmark"></span>
                     </label>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="explain">
+                    <h2>IntelliBan 설정</h2>
+                    <p>IntelliBan의 자료 파일을 어디에서 가져올지를 지정합니다.</p>
+                </div>
+                <div class="content">
+                    <input type="url" id="intelliBan_url" data-val="intelliBanUrl" placeholder="/intelliBan/rules.json">
                 </div>
             </div>
 
