--- a/interface/settings/index.html
+++ b/interface/settings/index.html
@@ -215,7 +215,7 @@
                     <p>IntelliBan의 자료 파일을 어디에서 가져올지를 지정합니다.</p>
                 </div>
                 <div class="content">
-                    <input type="url" id="intelliBan_url" data-val="intelliBanUrl" placeholder="/intelliBan/rules.json">
+                    <input type="url" id="intelliBan_url" data-val="intelliBanUrl" placeholder="https://raw.githubusercontent.com/Alex4386/turnoff-namuwiki/master/intelliBan/rules.json">
                 </div>
             </div>
 
