--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -218,6 +218,7 @@
     </footer>
 </body>
 <script src="/polyfill/browser-polyfill.min.js"></script>
+<script src="/lib/util.js"></script>
 <script src="/lib/settings_util.js"></script>
 <script src="/lib/popup.js"></script>
 </html>
