add: community redirects (wikipedia and librewiki)
Resolves issue #29

--- a/interface/settings/index.html
+++ b/interface/settings/index.html
@@ -202,10 +202,31 @@
                         <input type="checkbox" id="arxiv_auto" data-val="openArxiv">
                         <span class="checkmark"></span>
                     </label></p>
-                    <label class="container" for="googlescholar_auto">Google 학술검색
+                    <p><label class="container" for="googlescholar_auto">Google 학술검색
                         <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar">
                         <span class="checkmark"></span>
-                    </label>
+                    </label></p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="explain">
+                    <h2>커뮤니티 자동접속 설정</h2>
+                    <p>turnoff-namuwiki 개발진은 해당 플랫폼에 있는 컨텐츠에 대해 품질을 보장하지 않습니다.</p>
+                </div>
+                <div class="content">
+                    <p><label class="container" for="wikipedia_auto">위키백과
+                        <input type="checkbox" id="wikipedia_auto" data-val="openWikipedia">
+                        <span class="checkmark"></span>
+                    </label></p>
+                    <p><label class="container" for="librewiki_auto">리브레위키
+                        <input type="checkbox" id="librewiki_auto" data-val="openLibrewiki">
+                        <span class="checkmark"></span>
+                    </label></p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
             </div>
 
