fix: previously undefined settings to be applied

--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -206,6 +206,7 @@
         <hr />
         <div class="settings">
             <h2>설정: </h2>
+            <p>자동접속 설정(나무위키 접속 시 새 탭으로 접속 할 사이트)은 이곳에서 할 수 있습니다.</p>
             <a id="detail-settings" href="/interface/settings/index.html" target="_blank">상세 설정</a>
         </div>
             
