fix(SETTING): menu explanation out of range

--- a/interface/settings/index.html
+++ b/interface/settings/index.html
@@ -208,6 +208,7 @@
                         <input type="checkbox" id="googlescholar_auto" data-val="openGoogleScholar">
                         <span class="checkmark"></span>
                     </label></p>
+                    <p>&nbsp;</p><p>&nbsp;</p>
                 </div>
             </div>
 
