--- a/interface/help/adblock.html
+++ b/interface/help/adblock.html
@@ -202,5 +202,5 @@
     </footer>
 </body>
 <script src="/polyfill/browser-polyfill.min.js"></script>
-<script src="./showVersion.js"></script>
+<script src="/lib/help.js"></script>
 </html>
