fix: replace namu.live into arca.live

--- a/interface/banned/namu_live.html
+++ b/interface/banned/namu_live.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>나무라이브 꺼라</title>
+    <title>아카라이브 꺼라</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Nunito&display=swap');
         body {
