--- a/interface/popup/index.html
+++ b/interface/popup/index.html
@@ -189,11 +189,11 @@
         </div><br>
         <div class="search-filter">
             
-            <label class="switch-small to-right" for="namulive_block">
-                <input type="checkbox" id="namulive_block" data-val="namuLiveBlock">
+            <label class="switch-small to-right" for="arcalive_block">
+                <input type="checkbox" id="arcalive_block" data-val="arcaLiveBlock">
                 <span class="slider-small round"></span>
             </label>
-            <h3>나무라이브/나무뉴스 차단:</h3>
+            <h3>아카라이브/나무뉴스 차단:</h3>
         </div><br>
         <div class="search-filter">
             
