chore: add live update and etc.

--- a/interface/banned/index.html
+++ b/interface/banned/index.html
@@ -37,7 +37,8 @@
 </head>
 <body>
     <header>
-        <h1>TurnOff-NamuWiki</h1>
+        <h1>접속 차단 안내</h1>
+        <p>Powered by Turnoff-namuwiki</p>
     </header>
     <main>
         <p id="message"></p>
