--- a/interface/settings/index.html
+++ b/interface/settings/index.html
@@ -241,7 +241,8 @@
                     <p>차단 웹페이지의 자료 파일을 어디에서 가져올지를 지정합니다.</p>
                 </div>
                 <div class="content">
-                    <input type="url" id="blocked_url" data-val="blocked.url" placeholder="https://raw.githubusercontent.com/Alex4386/turnoff-namuwiki/master/filter/blockedSites.json">
+                    <input type="url" id="blocked_url" data-val="blocked.url" placeholder="https://raw.githubusercontent.com/Alex4386/turnoff-namuwiki/master/filter/blockedSites.json"><br>
+                    <button id="trigger-update-blocked">차단 데이터베이스 업데이트</button>               
                 </div>
             </div>
 
@@ -251,7 +252,8 @@
                     <p>IntelliBan의 자료 파일을 어디에서 가져올지를 지정합니다.</p>
                 </div>
                 <div class="content">
-                    <input type="url" id="intelliBan_url" data-val="intelliBan.url" placeholder="https://raw.githubusercontent.com/Alex4386/turnoff-namuwiki/master/intelliBan/rules.json">
+                    <input type="url" id="intelliBan_url" data-val="intelliBan.url" placeholder="https://raw.githubusercontent.com/Alex4386/turnoff-namuwiki/master/intelliBan/rules.json"><br>
+                    <button id="trigger-update-intelliBan">intelliBan 데이터베이스 업데이트</button>
                 </div>
             </div>
 
