feat: redirection and adblock is back

--- a/ui/banned/index.html
+++ b/ui/banned/index.html
@@ -46,6 +46,6 @@
     </main>
 </body>
 <script src="/polyfill/browser-polyfill.min.js"></script>
-<script src="/ui/_common/util.js"></script>
+<script src="/ui/_common/utils.js"></script>
 <script src="./index.js"></script>
 </html>
