feat: fix onlineRule synchronization

--- a/ui/popup/index.html
+++ b/ui/popup/index.html
@@ -187,6 +187,7 @@
                 <span class="slider-small round"></span>
             </label>
             <h3>나무위키 광고차단 <a href="/ui/help/adblock.html" target="_blank">(?)</a>: </h3>
+            <sub>나무뉴스 차단의 경우, 상세 설정에서 나무뉴스를 차단하세요</sub>
         </div><br>
         <div class="search-filter">
             
