--- a/ui/settings/index.html
+++ b/ui/settings/index.html
@@ -287,6 +287,20 @@
 
             <div class="card">
                 <div class="explain">
+                    <h2>나무위키 실제 라이센스 표시</h2>
+                    <p>umanle S.R.L. 이 주장하는 가짜라이선스가 아닌 umanle S.R.L. 이 실제로 적용하는 진짜 라이선스로 덮어 씌웁니다.</p>
+                </div>
+                <div class="content">
+                    <label class="container" for="force_real_license">실제 라이센스 표시
+                        <input type="checkbox" id="force_real_license" data-val="adblock.forceRealLicense">
+                        <span class="checkmark"></span>
+                    </label>
+                    <br><br><br><br><br>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="explain">
                     <h2>설정 디버깅</h2>
                     <p>TurnOff-NamuWiki의 설정을 디버깅하기 위한 페이지로 이동합니다.</p>
                 </div>
