--- a/ui/banned/index.html
+++ b/ui/banned/index.html
@@ -4,48 +4,217 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>나무위키 꺼라</title>
+    <title>접속 차단 안내 - 나무위키(?)</title>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Nunito&display=swap');
-        body {
-            font-family: "Nunito", "Noto Sans KR", sans-serif;
-            text-align: center;
-            font-size: 2em;
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Nunito:wght@400;700&display=swap');
+        
+        :root {
+            --primary-color: #2563eb;
+            --bg-color: #f8fafc;
+            --text-color: #1e293b;
+            --header-bg: #1e293b;
+            --header-text: #f8fafc;
+            --accent-color: #ef4444;
+            --card-bg: #ffffff;
+            --card-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            --secondary-text: #64748b;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --primary-color: #60a5fa;
+                --bg-color: #0f172a;
+                --text-color: #e2e8f0;
+                --header-bg: #1e293b;
+                --header-text: #f8fafc;
+                --accent-color: #f87171;
+                --card-bg: #1e293b;
+                --card-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
+                --secondary-text: #94a3b8;
+            }
+        }
+
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
-        header {
-            background: #000;
-            padding: 1em;
-            color: #FFF;
-        }
-        .important {
-            color: #F44;
-        }
+
         body {
-            background: #333;
-            color: #FFF;
+            font-family: "Nunito", "Noto Sans KR", sans-serif;
+            line-height: 1.6;
+            background: var(--bg-color);
+            color: var(--text-color);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
-        a {
-            color: #66f;
-            text-decoration: none;
+
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
         }
+
+        @media (min-width: 1024px) {
+            .container {
+                flex-direction: row;
+            }
+        }
+
+        header {
+            background: var(--header-bg);
+            color: var(--header-text);
+            padding: 2rem;
+            text-align: center;
+            animation: slideDown 0.5s ease-out;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            min-height: 200px;
+            transition: background-color 0.3s ease;
+        }
+
+        @media (min-width: 1024px) {
+            header {
+                width: 40%;
+                min-height: 100vh;
+                position: fixed;
+                left: 0;
+                animation: slideRight 0.5s ease-out;
+            }
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            font-size: 1rem;
+            opacity: 0.9;
+        }
+
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            width: 100%;
+            animation: fadeIn 0.5s ease-out;
+        }
+
+        @media (min-width: 1024px) {
+            main {
+                margin-left: 40%;
+                padding: 4rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                min-height: 100vh;
+            }
+        }
+
+        #wrapper {
+            background: var(--card-bg);
+            border-radius: 1rem;
+            box-shadow: var(--card-shadow);
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            padding: 2.5rem 0;
+        }
+
+        #message {
+            font-size: 1.5rem;
+            text-align: center; 
+        }
+
         #wanna_access {
             font-size: 1rem;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            text-align: center;
+            max-width: 520px;
+            margin: 0 auto;
+        }
+
+        .important {
+            color: var(--accent-color);
+            font-weight: 700;
+        }
+
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        a:hover {
+            text-decoration: underline;
+            opacity: 0.9;
+        }
+
+        @keyframes slideDown {
+            from {
+                transform: translateY(-100%);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideRight {
+            from {
+                transform: translateX(-100%);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 640px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            #message {
+                font-size: 1.25rem;
+                padding: 1.5rem;
+            }
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>접속 차단 안내</h1>
-        <p>Powered by Turnoff-namuwiki</p>
-    </header>
-    <main>
-        <p id="message"></p>
-        <p id="wanna_access"></p>
-    </main>
+    <div class="container">
+        <header>
+            <h1>접속 차단 안내</h1>
+            <p>Powered by Turnoff-namuwiki</p>
+        </header>
+        <main>
+            <div id="wrapper">
+                <div id="message"></div>
+                <p id="wanna_access"></p>
+            </div>
+        </main>
+    </div>
+    <script src="/polyfill/browser-polyfill.min.js"></script>
+    <script src="/ui/_common/utils.js"></script>
+    <script src="./index.js"></script>
 </body>
-<script src="/polyfill/browser-polyfill.min.js"></script>
-<script src="/ui/_common/utils.js"></script>
-<script src="./index.js"></script>
 </html>
